--- a/app/src/main/res/layout/fragment_search_field.xml
+++ b/app/src/main/res/layout/fragment_search_field.xml
@@ -13,13 +13,17 @@
         app:endIconMode="clear_text"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:hintTextColor="@color/dark_blue"
+        app:cursorColor="@color/dark_blue"
+        app:boxStrokeColor="@color/dark_blue">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/search_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="text" />
+            android:inputType="text"
+            />
     </com.google.android.material.textfield.TextInputLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
