--- a/app/src/main/res/layout/fragment_login_register.xml
+++ b/app/src/main/res/layout/fragment_login_register.xml
@@ -42,7 +42,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:backgroundTint="@color/dark_blue"
-        android:text="Регистрация"
+        android:text="@string/reg"
         android:textColor="@android:color/white"
         android:textSize="18sp" />
 </LinearLayout>
