--- a/app/src/main/res/layout/fragment_login_register.xml
+++ b/app/src/main/res/layout/fragment_login_register.xml
@@ -27,7 +27,7 @@
         android:textStyle="bold" />
 
     <Button
-        android:id="@+id/login_button"
+        android:id="@+id/go_to_login_button"
         android:layout_width="294dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
@@ -37,7 +37,7 @@
         android:textSize="18sp" />
 
     <Button
-        android:id="@+id/register_button"
+        android:id="@+id/go_to_register_button"
         android:layout_width="294dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
